--- a/HTML/aula7.html
+++ b/HTML/aula7.html
@@ -58,7 +58,7 @@
 			<header class="cor">Listas</header>
 			<article id="listas">
 			<p>Listas ordenadas
-			<ol start="1" type="a">
+			<ol start="1" type="a"><!--O type é a ordenação -->
 				<li>Ortopedista</li>
 				<li>Dentista</li>
 				<li>Clínico Geral</li>
